Revision history for Perl extension Text-Sass-XS

{{$NEXT}}

0.06 2013-06-18T09:23:39Z
    - Adds Text::Sass compatible interface.
    - Renames xt/leaktrace.t author_scripts/leaktrace.t
    - Adds aTHX_.
    - Skips some tests which don't work on MSWin.

0.05 2013-06-18T07:02:26Z
    - Fixes memory leaks.

0.04 2013-06-18T04:09:47Z
    - Adds ExtUtils::CBuilder to dependencies.
    - Changes compiler and linker flags.

0.03 2013-06-17T13:21:24Z
    - Adds OO Interface.

0.02 2013-06-16T13:52:56Z
    - Uses g++ to compile xs instead of cc.
    - Updates POD.

0.01 2013-06-16T11:36:59Z

    - original version
