@@ -1,6 +1,7 @@
 Revision history for Perl extension Text-Sass-XS
 
 {{$NEXT}}
+    - Fixes c++ compiler check.
 
 0.06 2013-06-18T09:23:39Z
     - Adds Text::Sass compatible interface.
